--- a/Desktop/Gmaps/map.html
+++ b/Desktop/Gmaps/map.html
@@ -8,6 +8,19 @@
             height: 400px;
             width: 100%;
         }
+        .weather {
+            width: 50%;
+            height: 25%;
+            background-color: #e3e3e3;
+            font-family: sans-serif;
+            font-size: 2.3rem;
+            color: tomato;
+            text-align: center;
+            font-weight: 600;
+            margin: auto;
+            padding: 40px;
+            border-radius: 2em;
+        }
 
     </style>
 </head>
@@ -15,11 +28,12 @@
 <h3>Weather App</h3>
 <div id="map"></div>
 <div id="current">Nothing yet...</div>
+<div class="weather">Weather report will show here!!!</div>
+
 <script
         src="https://code.jquery.com/jquery-3.3.1.js"
         integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
         crossorigin="anonymous"></script>
-
 <script src="googlemap.js"></script>
 <script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAhZeO42QNAkcb4IS8jv8fFOlau6yENTSU&callback=initMap">
